tests/golden/type_errors/collection_helper_contains_value_mismatch.cd
contains([1], "x");
